<resources>
    <string name="app_name">МУИТ</string>
    <string name="main">Дистанционное обучение МУИТ</string>
    <string-array name="type">
        <item>преподаватель</item>
        <item>студент</item>
    </string-array>
    <string name="parol">Пароль</string>
    <string name="loginB">Войти</string>
    <string name="autorization">Авторизация</string>
    <string name="gallery">Галерея</string>
    <string name="subject">Предметы</string>
    <string name="calendar">Календарь</string>
    <string name="teacher">Преподаватель</string>
    <string name="student">Студент</string>
    <string name="save">Сохранить</string>
    <string name="fullName">ФИО:</string>
    <string name="phoneNumber">Номер телефона:</string>
    <string name="comment">Комментарии:</string>
    <string name="name">Название:</string>
    <string name="data">Дата</string>
    <string name="time">Время</string>
    <string name="lecture">Лекция</string>
    <string name="search">Поиск</string>
    <string name="sort">Критерии поиска</string>
    <string name="enter">Введите...</string>
    <string name="report">Отчет</string>
    <string name="topic">Тема:</string>
    <string name="commentTeacher">Комментарии для преподавателя:</string>
    <string name="commentStudent">Комментарии для студента:</string>
    <string name="alert_dialog_title">Выберите критерии</string>
    <string-array name="languages">
        <item>Преподаватель</item>
        <item>Студент</item>
        <item>Название</item>
        <item>Предмет</item>
        <item>Тема</item>
        <item>Дата</item>
    </string-array>


    <string name="date">Дата</string>
    <string name="year">г.</string>
    <string-array name="months">
        <item>Января</item>
        <item>Февраля</item>
        <item>Марта</item>
        <item>Апреля</item>
        <item>Мая</item>
        <item>Июня</item>
        <item>Июля</item>
        <item>Августа</item>
        <item>Сентября</item>
        <item>Октября</item>
        <item>Ноября</item>
        <item>Декабря</item>
    </string-array>
</resources>
