<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tittle_left" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        style="@style/myCustomEditText"
        android:id="@+id/name"
        android:hint="@string/fullName"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:id="@+id/comTeacher"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        style="@style/myCustomEditText"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="@style/myCustomButton"
        android:id="@+id/btnSave"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        style="@style/myCustomEditText"
        android:hint="@string/phoneNumber"
        android:ems="10"
        android:id="@+id/phoneNumber"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>