<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/tittle_left" />


    <EditText
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/name"
        style="@style/myCustomEditText"
        android:layout_below="@+id/app_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:id="@+id/comSubject"
        style="@style/myCustomEditText"
        android:hint="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/studentName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSave"
        style="@style/myCustomButton"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>